added new section and icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Year New Me</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,15 +26,21 @@
                 <div>
                     <h2 class="section-title">My failures of <br> previous year</h2>
                     <p class="section-description">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
-                    <p class="failure-point">Contrary to popular belief, is not simply.</p>
-                    <p class="failure-point">Contrary to popular belief.</p>
-                    <p class="failure-point">Contrary to popular , is not simply.</p>
-                    <p class="failure-point">Contrary to popular belief, is not simply.</p>
-                    <p class="failure-point">Contrary to popular simply.</p>
+                    <p class="failure-point"><img src="images/icons/accept.png" alt="">Help people who needed help.</p>
+                    <p class="failure-point"><img src="images/icons/accept.png" alt="">Love yourself, trust yourself, confident yourself.</p>
+                    <p class="failure-point"><img src="images/icons/accept.png" alt="">Put your face always Smiley face . </p>
+                    <p class="failure-point"><img src="images/icons/accept.png" alt="">Be brave, hardworking and honest.</p>
+                    <p class="failure-point"><img src="images/icons/accept.png" alt="">Always think positive.</p>
                 </div>
             </div>
         </section>
-
+        <!-- Lovely  Quotes Section -->
+        <section class=" quotes">
+            <h2 class="section-title"><q>I am my own version of beautiful which no one else can be.</q> - Jenna Goodhand</h2>
+            <h2 class="section-title"><q>You yourself, as much as anybody from the entire universe, deserve your love and affection.</q>- Buddha</h2>
+            <h2 class="section-title"><q>Dare to love yourself as if you were a rainbow with gold at both ends.</q>- Aberjhani</h2>
+            <button class="btn-primary">Call Now</button>
+        </section>
         <!-- My Plans Section -->
         <section class="plans">
             <h2 class="section-title">My Plans</h2>
