--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
             <p class="section-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
             <p class="contact-email">Email : info@gmail.com</p>
             <p class="contact-phone">Phone : 01500 00 00 00</p>
-            <a href="">
+            <a href="https://www.facebook.com">
                 <img src="images/icons/fb.png" alt="">
             </a>
-            <a href="">
+            <a href="https://www.twitter.com">
                 <img src="images/icons/twitter.png" alt="">
             </a>
-            <a href="">
+            <a href="https://www.youtube.com">
                 <img src="images/icons/youtube.png" alt="">
             </a>
         </div>
